# htmx-demo

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Rocket.toml  build.rs
scripts/: bootstrap.sh
src/: image.rs  image_id.rs  main.rs
static/: main.css
templates/: about.html.tera  base.html.tera  footer.html.tera  index.html.tera  nav.html.tera  result.html.tera
templates/error/: 404.html.tera
upload/0gWJs/: 400  500  600  640  700  800
upload/BZ0pS/: 1024  1280  1920  240  320  480  640  768
upload/J7olt/: 1280  1920  320  768
upload/M3UZH/: 1280
upload/OcTFD/: 1024  1280  1920  240  320  480  640  768  original
upload/RyBLs/: 1024  1280  1920  240  320  480  640  768  original
upload/a3pgp/: 240
upload/b3uHj/: 1024  1280  1920  240  320  480  640  768
upload/mwaAH/: 1024  1920  320  480  768
upload/rAmAx/: 1024  240  480  640  original
